@@ -144,8 +144,7 @@ void FileSetOutput::print(FileSet &fs, OutputJob *o) const
 	 if(!use_fmt || !*use_fmt)
 	    use_fmt="%b %e  %Y\n%b %e %H:%M";
 
-	 xstring_c dt_mem;
-	 dt_mem.set_allocated(xstrftime(use_fmt, localtime (&f->date.ts)));
+	 xstring_ca dt_mem(xstrftime(use_fmt, localtime (&f->date.ts)));
 	 char *dt=strtok(dt_mem.get_non_const(),"\n|");
 	 if(recent) {
 	    char *dt1=strtok(NULL,"\n|");
