@@ -4,6 +4,8 @@
 	  truncate_at so that it works on binary strings.
 	* FileSetOutput.cc, FileSetOutput.h, commands.cc: use xstring;
 	  disable FileSetOutput cloning and assignment.
+	* xstring.h: (xstring_ca) new class for allocated strings.
+	* FileSetOutput.cc, SFtp.cc: use it.
 
 2007-04-05  Alexander V. Lukyanov <lav@yars.free.net>
 
